codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__unified_mention_popup_falls_back_from_bound_plugin_on_right.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"› @left  @bound                                                                                     "
"                                                                                                    "
"> left  Plugin used to test bound mention fallback.                                           Plugin"
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  enter insert · esc close · ←/→ switch search modes     [All Results]   Filesystem Only    Plugins "
